--- a/Views/admin/partials/header.pug
+++ b/Views/admin/partials/header.pug
@@ -7,7 +7,9 @@ header.header
 
             .col-9
                 .text-end 
+                    a.btn.btn-primary.btn-sm.me-2(
+                        href=`${prefixAdmin}/my-account`
+                    ) #{user.fullName}
                     a.btn.btn-danger.btn-sm(
                         href=`${prefixAdmin}/auth/logout`
-                
                     ) Đăng xuất
