--- a/Views/admin/pages/products/create.pug
+++ b/Views/admin/pages/products/create.pug
@@ -34,6 +34,23 @@ block main
                     option(value="") -- Chọn danh mục --
                     if (categories) 
                         +select-tree(categories)
+            .form-group.form-check.form-check-inline 
+                input.form-check-input(
+                    type='radio',
+                    id='featured1'
+                    name='featured'
+                    value='1'
+                )
+                label.form-check-label(for='featured1') Nổi bật
+            .form-group.form-check.form-check-inline 
+                input.form-check-input(
+                    type='radio',
+                    id='featured0'
+                    name='featured'
+                    value='0'
+                    checked
+                )
+                label.form-check-label(for='featured0') Không nổi bật
             div(class="form-group")
                 label(for="desc") Mô tả
                 textarea(
