--- a/Views/admin/pages/products/edit.pug
+++ b/Views/admin/pages/products/edit.pug
@@ -35,6 +35,24 @@ block main
                     option(value="") -- Chọn danh mục --
                     if (categories) 
                         +select-tree(categories, 1, item.category_id)
+            .form-group.form-check.form-check-inline 
+                input.form-check-input(
+                    type='radio',
+                    id='featured1'
+                    name='featured'
+                    value='1'
+                    checked = (item.featured == '1') ? true : false
+                )
+                label.form-check-label(for='featured1') Nổi bật
+            .form-group.form-check.form-check-inline 
+                input.form-check-input(
+                    type='radio',
+                    id='featured0'
+                    name='featured'
+                    value='0'
+                    checked = (item.featured == '1' || !item.featured) ? true : false
+                )
+                label.form-check-label(for='featured0') Không nổi bật
             div(class="form-group")
                 label(for="desc") Mô tả
                 textarea(
