--- a/Views/Client/Pages/Home/index.pug
+++ b/Views/Client/Pages/Home/index.pug
@@ -1,4 +1,14 @@
 extends ../../layouts/default.pug
+include ../../mixins/box-head.pug
+include ../../mixins/product-view.pug
 
 block main 
     h1 Trang chủ
+
+
+    .section-products-featured.my-5
+        .container.my-3 
+            .row 
+                .col-12 
+                    +box-head("Sản phẩm nổi bật")
+            +productView(productsFeatured)
