--- a/public/css/style.css
+++ b/public/css/style.css
@@ -53,11 +53,32 @@
     border-radius: 5px;
     padding: 15px;
   }
+
+  .product-item .inner-image {
+    width: 100%;
+    aspect-ratio: 4/3;
+    border-bottom: 1px solid #ddd;
+    position: relative;
+  }
   
   .inner-image img {
     max-width: 100%; /* Make the image responsive */
     height: auto; /* Maintain aspect ratio */
+    object-fit: cover;
   }
+
+  .product-item .inner-featured {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background: green;
+    padding: 3px 6px;
+    font-weight: 600;
+    font-size: 14px;
+    border-radius: 8px;
+  }
+
+
   
   .inner-content {
     text-align: center;
@@ -116,3 +137,4 @@
 .sub-menu ul li:hover > ul {
   display: block;
 }
+
