--- a/Views/Client/Pages/user/login.pug
+++ b/Views/Client/Pages/user/login.pug
@@ -37,3 +37,7 @@ block main
                         button.btn.btn-primary(
                             type='submit'
                         ) Đăng nhập
+                
+                a(
+                    href='/user/password/forgot'
+                ) Quên mật khẩu
