--- a/Views/admin/pages/dashboard/index.pug
+++ b/Views/admin/pages/dashboard/index.pug
@@ -1,4 +1,55 @@
 extends ../../layouts/default.pug
 
 block main 
-    h1 Dashboard
+    h1 #{titlePage}
+
+    .row.mt-4 
+        .col-12 
+            .card.mb-4 
+                .card-header Thông tin tài khoản 
+                .card-body 
+                    if(user.avatar)
+                        img(
+                            src=user.avatar
+                            style='height: 100px; margin-bottom: 15px;'
+                        )
+                    if(user.fullName)
+                        p Họ tên: <b>#{user.fullName}</b>
+                    if(user.email)
+                        p Email: <b>#{user.email}</b>
+                    if(user.phone)
+                        p SĐT: <b>#{user.phone}</b>
+                    if(role.title)
+                        p Role: <b>#{role.title}</b>
+            
+        .col-6 
+            .card.mb-4 
+                .card-header Danh mục sản phẩm
+                .card-body
+                    p Số lượng: <b>#{statistic.category.total}</b>
+                    p Hoạt động: <b>#{statistic.category.active}</b>
+                    p Dừng hoạt động: <b>#{statistic.category.inactive}</b>
+
+        .col-6 
+            .card.mb-4 
+                .card-header Sản phẩm
+                .card-body
+                    p Số lượng: <b>#{statistic.product.total}</b>
+                    p Hoạt động: <b>#{statistic.product.active}</b>
+                    p Dừng hoạt động: <b>#{statistic.product.inactive}</b>
+
+        .col-6 
+            .card.mb-4 
+                .card-header Tài khoản admin
+                .card-body
+                    p Số lượng: <b>#{statistic.account.total}</b>
+                    p Hoạt động: <b>#{statistic.account.active}</b>
+                    p Dừng hoạt động: <b>#{statistic.account.inactive}</b>
+
+        .col-6 
+            .card.mb-4 
+                .card-header Tài khoản client
+                .card-body
+                    p Số lượng: <b>#{statistic.user.total}</b>
+                    p Hoạt động: <b>#{statistic.user.active}</b>
+                    p Dừng hoạt động: <b>#{statistic.user.inactive}</b>
