--- a/Views/Client/Pages/chat/index.pug
+++ b/Views/Client/Pages/chat/index.pug
@@ -11,20 +11,23 @@ block main
             .col-12 
                 .chat 
                     .inner-body 
-                        .inner-incoming
-                            .inner-name A
-                            .inner-content
-                                | abc 
-                        .inner-outgoing 
-                            .inner-content
-                                | abc 
-                        .inner-incoming
-                            .inner-name A
-                            .inner-content
-                                | abc 
-                        .inner-outgoing
-                            .inner-content
-                                | abc 
+                        each chat in chats
+                            if (chat.infoUser.id != user.id)
+                                .inner-incoming
+                                    .inner-name #{chat.infoUser.fullName}
+                                    .inner-content
+                                        | #{chat.content} 
+                            else
+                                .inner-outgoing 
+                                    .inner-content
+                                        | #{chat.content} 
+                        //- .inner-incoming
+                        //-     .inner-name A
+                        //-     .inner-content
+                        //-         | abc 
+                        //- .inner-outgoing
+                        //-     .inner-content
+                        //-         | abc 
                     .inner-foot 
                         form.inner-form(
                             action=``
