--- a/Views/Client/layouts/default.pug
+++ b/Views/Client/layouts/default.pug
@@ -16,4 +16,5 @@ html
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js") 
         script(src="/js/script.js") 
         script(src="/socket.io/socket.io.js") 
+        script(src="/js/socket.js") 
         script(src="/js/chat.js") 
