--- a/Views/Client/Pages/chat/index.pug
+++ b/Views/Client/Pages/chat/index.pug
@@ -30,7 +30,12 @@ block main
                                 placeholder='Nhập nội dung...'
                                 name='content'
                             )
+                            span.button-icon.btn.btn-light.mx-2 
+                                i.fa-regular.fa-face-smile
                             button 
                                 i.fa-solid.fa-paper-plane
+
+    .tooltip(role='tooltip')
+        emoji-picker.light
 
 
