--- a/Views/Client/layouts/default.pug
+++ b/Views/Client/layouts/default.pug
@@ -16,5 +16,6 @@ html
         script(src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js") 
         script(src="/js/script.js") 
         script(src="/socket.io/socket.io.js") 
+        script(type='module' src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js") 
         script(src="/js/socket.js") 
-        script(src="/js/chat.js") 
+        script(type='module' src="/js/chat.js") 
