--- a/public/css/style.css
+++ b/public/css/style.css
@@ -229,6 +229,8 @@
 
 .inner-body {
   padding: 10px;
+  max-height: 450px;
+  overflow: auto;
 }
 
 .inner-incoming,
@@ -283,4 +285,7 @@ button {
   cursor: pointer;
 }
 
-
+.tooltip.shown {
+  visibility: visible;
+  opacity: 1;
+}
