--- a/Views/Client/Pages/chat/index.pug
+++ b/Views/Client/Pages/chat/index.pug
@@ -1,8 +1,12 @@
 extends ../../layouts/default.pug
 include ../../mixins/box-head.pug
 
+
 block main 
     .container.my-3.chat
+
+        include ../../partials/list-user-button.pug
+
         .row 
             .col-12 
                 +box-head(titlePage)
