--- a/Views/Client/layouts/default.pug
+++ b/Views/Client/layouts/default.pug
@@ -10,7 +10,8 @@ html
             type='text/css',
             href="https://unpkg.com/file-upload-with-preview/dist/style.css")
         link(
-            href='https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.6/viewer.min.js'
+            rel="stylesheet", 
+            href='https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.6/viewer.css'
         )
 
     body 
@@ -25,5 +26,7 @@ html
         script(src="/socket.io/socket.io.js") 
         script(type='module' src="https://cdn.jsdelivr.net/npm/emoji-picker-element@^1/index.js") 
         script(src="/js/socket.js") 
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.6/viewer.min.js") 
+        script(src='https://cdnjs.cloudflare.com/ajax/libs/viewerjs/1.11.6/viewer.js')
         script(type='module' src="/js/chat.js") 
         script(src="https://unpkg.com/file-upload-with-preview/dist/file-upload-with-preview.iife.js") 
