--- a/Views/Client/partials/list-user-button.pug
+++ b/Views/Client/partials/list-user-button.pug
@@ -11,4 +11,8 @@
         ) Lời mời đã gửi
         a.btn.btn-primary.m-1(
             href='/users/accept'
-        ) Lời mời kết bạn
+        ) 
+            | Lời mời kết bạn
+            span.badge.bg-dark.ms-1(
+                badge-users-accept=user.id
+            ) #{user.acceptFriend.length}
