--- a/public/css/style.css
+++ b/public/css/style.css
@@ -442,3 +442,13 @@ button {
 .box-user.accept [btn-accepted-friend] {
   display: inline-block;
 }
+
+.box-user .inner-status {
+  font-size: 12px;
+  color: #00d800;
+  opacity: 0;
+}
+
+.box-user .inner-status[status="online"]{
+  opacity: 1;
+}
